# pypinindia-raja

./: .project  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: test-and-publish.yml
examples/: basic_usage.py
pinin/: __init__.py  cli.py  core.py  exceptions.py  main.py  test.py  util.py
tests/: __init__.py  test_pypinindia.py
